syntax = "proto3";

package stock;
import "general.proto";

// Message used to store the user data
// in the statefun and also what we give back to the
// queries
message ItemData {
    uint64 id = 1;
    int64 price = 2;
    int64 stock = 3;
}

// Message used to keep track of the current max
// id to be assigned
message Count{
    uint64 num = 1;
}

// Create an item with a certain price.
message CreateItemRequest{
    int64 price = 1;
    RequestInfo request_info = 2;
}

// internal to be used by the statefun
// between the create_item and the item function
message CreateItemWithId{
    uint64 id = 1;
    int64 price = 2;

    RequestInfo request_info = 3;
    bool internal = 4;
}

message StockRequest {

    // Get stock item.
    message FindItemRequest{
        uint64 id = 1;
    }

    // Substract stock.
    message SubtractItemStockRequest{
        uint64 id = 1;
        int64 amount = 2;
    }

    // Add stock.
    message AddItemStockRequest{
        uint64 id = 1;
        int64 amount = 2;
    }

    // Request info
    RequestInfo request_info = 1;

    oneof message {
        FindItemRequest find_item = 2;
        SubtractItemStockRequest subtract_stock = 3;
        AddItemStockRequest add_stock = 4;

    }

    // Internal messages for order service.
    bool internal = 6;
    int64 order_id = 7;
}

message StockResponse {
    RequestInfo request_info = 1;
    uint64 item_id = 2;
    string result = 3;
}